# minimax-studio

./: .gitignore  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/ms/: clip.go  main.go  make.go  music.go  plan.go  platform_other.go  platform_windows.go  quota.go  server.go  stitch.go  voice.go
docs/: rewrite-eval.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app-data.ts  app-types.ts  app-utils.tsx  icons.tsx  styles.css
frontend/src/components/: ClipForm.tsx  ImageForm.tsx  JobPanel.tsx  MakeForm.tsx  MusicForm.tsx  PlanForm.tsx  QuotaPanel.tsx  StitchForm.tsx  VoiceForm.tsx
frontend/src/styles/: base.css  components.css  layout.css  variables.css
internal/api/: frontend.go  frontend_embed.go  frontend_noembed.go  server.go  server_test.go
internal/api/handlers/: clip.go  (+11 more)
internal/client/: minimax.go  minimax_test.go  plan_test.go
internal/media/: ffmpeg.go
internal/schemas/: types.go  types_test.go
internal/workflows/: clip.go  make.go  music.go  plan.go  stitch.go  voice.go
output/000b9144-593e-4b50-9b5e-493848bc8739/: job.json
output/1bb29bbb-3366-4cad-9896-c1f475d59467/: job.json
output/28ad8042-1a23-4569-b5ef-b472998a568d/: job.json  plan.json  voice.txt
output/acda7ce6-ff68-4eb2-a608-75cce3b5aab8/: job.json
output/bf3a20e4-2aff-4f2a-818f-aa6b80d39ff1/: job.json
output/cb1f5c33-1ffa-45a7-8d77-1cc4a2d1384b/: job.json
scripts/: dev.sh
src/minimax_studio/: client.py  files.py  media.py  model_catalog.py  schemas.py
(+16 files in other folders)
